# CMakeList.txt : CMake project for 1-extractYUV420, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (1-extractYUV420 "1-extractYUV420.cpp" "1-extractYUV420.h")

# TODO: Add tests and install targets if needed.
